src/app/modules/wybin-schedule/components/wybin-schedule/wybin-schedule.component.scss
@import "variables";

.tournaments {
	display: flex;
	flex-direction: column;
	gap: 8px;

	.tournament {
		padding: 8px;
		border: 1px solid $primary;

		.header {
			padding: 8px;

			font-size: 28px;
			font-weight: bold;
			text-align: center;

			color: $primary;
		}

		.matches {
			display: flex;
			flex-direction: column;
			gap: 8px;

			padding: 8px;

			.match {
				display: flex;
				align-items: center;
				justify-content: space-between;

				border: 1px solid $primary;
				padding: 8px;

				.match-information {
					display: flex;
					gap: 8px;

					.date-time {
						display: grid;
						grid-template-columns: 100px 70px 50px;

						justify-content: center;
						justify-items: center;

						.date {
							display: flex;
							flex-direction: column;
							align-items: center;
							justify-content: center;

							.date-text {
								font-size: 15px;
							}

							.date-number {
								font-size: 20px;
								font-weight: bold;
							}
						}

						.time {
							font-size: 18px;
						}

						.time,
						.match-id {
							align-self: center;
						}
					}

					.match-name {
						display: flex;
						align-items: center;
					}
				}
			}
		}
	}
}

